[gd_scene load_steps=3 format=2]

[ext_resource path="res://mods/core/abilities/Invisible.gd" type="Script" id=1]
[ext_resource path="res://addons/network-sync-rollback/NetworkTimer.gd" type="Script" id=2]

[node name="Invisible" type="Node2D"]
script = ExtResource( 1 )

[node name="LifetimeTimer" type="Node" parent="."]
script = ExtResource( 2 )
one_shot = true
wait_ticks = 300

[node name="WarningTimer" type="Node" parent="."]
script = ExtResource( 2 )
one_shot = true
wait_ticks = 240

[node name="VisibleTimer" type="Node" parent="."]
script = ExtResource( 2 )
one_shot = true
wait_ticks = 7

[node name="BlinkTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 4

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
